--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "test": "nyc mocha --recursive --timeout 10000",
-    "dev": "DEBUG=awsconnectdashboard:* ./node_modules/nodemon/bin/nodemon.js ./bin/www -e js,mjs,json,ejs,html,js,css"
+    "dev": "DEBUG=awsconnectdashboard:* ./node_modules/nodemon/bin/nodemon.js ./bin/www -e js,mjs,json,ejs,html,js,css",
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "@aws-sdk/client-connect": "^3.188.0",
@@ -20,6 +21,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "bootstrap": "^5.2.2",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "feather-icons": "^4.29.0",
