--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "nyc mocha --recursive --timeout 10000",
     "dev": "DEBUG=awsconnectdashboard:* ./node_modules/nodemon/bin/nodemon.js ./bin/www -e js,mjs,json,ejs,html,js,css",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "pm-start": "./node_modules/pm2/bin/pm2 start bin/www --name awsconnectdashboard --time --log logs/logs.txt",
+    "pm-stop":"./node_modules/pm2/bin/pm2 stop awsconnectdashboard"
   },
   "dependencies": {
     "@aws-sdk/client-connect": "^3.188.0",
@@ -18,7 +20,8 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pm2": "^5.2.2"
   },
   "devDependencies": {
     "bootstrap": "^5.2.2",
