--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "start": "node ./bin/www",
     "test": "nyc mocha --recursive --timeout 10000",
     "dev": "DEBUG=awsconnectdashboard:* ./node_modules/nodemon/bin/nodemon.js ./bin/www -e js,mjs,json,ejs,html,js,css",
-    "start": "node ./bin/www",
+    "uglifycss": "node utilities/uglifycss.js",
+    "uglifyjs": "node utilities/uglifyjs.js",
     "pm-loc-start": "./node_modules/pm2/bin/pm2 start bin/www --name ccconfigpanel-loc --time --log logs/logs.txt",
     "pm-loc-stop": "./node_modules/pm2/bin/pm2 stop ccconfigpanel-loc",
     "pm-start": "pm2 start bin/www --name ccconfigpanel --time --log logs/logs.txt",
@@ -20,7 +22,9 @@
     "dynamoose": "^3.1.0",
     "ejs": "^3.1.8",
     "express": "~4.16.1",
+    "express-compression": "^1.0.2",
     "express-flash": "^0.0.2",
+    "express-minify-html-2": "^1.0.1",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
@@ -33,6 +37,8 @@
     "feather-icons": "^4.29.0",
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "uglify-js": "^3.17.4",
+    "uglifycss": "^0.0.29"
   }
 }
