--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "dotenv": "^16.0.3",
     "dynamoose": "^3.1.0",
     "ejs": "^3.1.8",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "express-compression": "^1.0.2",
     "express-flash": "^0.0.2",
     "express-minify-html-2": "^1.0.1",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "socket.io": "^4.5.4",
     "winston": "^3.8.2"
   },
   "devDependencies": {
