--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "express-flash": "^0.0.2",
     "express-minify-html-2": "^1.0.1",
     "express-session": "^1.17.3",
+    "group-by-with": "^1.0.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "set-interval-async": "^3.0.3",
     "socket.io": "^4.5.4",
     "winston": "^3.8.2"
   },
