--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/client-connect": "^3.188.0",
     "@aws-sdk/client-dynamodb": "^3.190.0",
     "@aws-sdk/lib-dynamodb": "^3.190.0",
+    "bcrypt": "^5.1.0",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "dynamoose": "^3.1.0",
@@ -30,6 +31,7 @@
     "group-by-with": "^1.0.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "session-file-store": "^1.5.0",
     "set-interval-async": "^3.0.3",
     "socket.io": "^4.5.4",
     "winston": "^3.8.2"
