--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "group-by-with": "^1.0.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "set-interval-async": "^3.0.3",
     "socket.io": "^4.5.4",
