--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "uglifyjs": "node utilities/uglifyjs.js",
     "pm-loc-start": "./node_modules/pm2/bin/pm2 start bin/www --name ccconfigpanel-loc --time --log logs/logs.txt",
     "pm-loc-stop": "./node_modules/pm2/bin/pm2 stop ccconfigpanel-loc",
+    "pm-loc-logs": "./node_modules/pm2/bin/pm2 logs",
+    "pm-loc-status": "./node_modules/pm2/bin/pm2 status",
     "pm-start": "pm2 start bin/www --name ccconfigpanel --time --log logs/logs.txt",
     "pm-stop": "pm2 stop ccconfigpanel"
   },
@@ -36,6 +38,7 @@
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "pm2": "^5.2.2",
     "session-file-store": "^1.5.0",
     "set-interval-async": "^3.0.3",
     "socket.io": "^4.5.4",
